# video-shot-agent

./: .dockerignore  .env.example  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  MANIFEST.in  README.md  README_zh.md  SECURITY.md  main.py  pyproject.toml  requirements.txt
bak/: README.md  ai_config.py  base_config.py  client_config_bak.py  client_factory_bak.py  embedding_config.py  llm_config.py  settings.yaml
bak/memory/: long_term_memory.py  medium_summary_term_memory.py  medium_term_memory.py  memory_manager.py  short_term_memory.py  task_memory.py
config/: settings.yaml
config/env/: development.yaml
docs/: ARCHITECTURE.md  CNAME  PenShot.md  README-en.md  index.html  任务层拆分设计与实现文档.md  工作流职责拆分设计与实现文档.md  架构演进：从 MVP 到成品.md  项目全面分析与优化.md  项目全面分析与建议.md
docu/: 任务计划.md
example/: a2a_integration.py  advanced_integration.py  direct_usage.py  function_calls_data.json  hengline_config_demo.py  langgraph_integration.py  mcp_client.py  mcp_http_client.py  mcp_server_demo.py  neopen_demo.py  penshot_config_demo.py  web_app.py
example/json_demo/: prompt_converter_result.json  video_splitter_result.json
examples/: __init__.py  a2a_integration.py  direct_usage.py  langgraph_integration.py  mcp_client.py  mcp_http_client.py  mcp_server_demo.py  neopen_demo.py  penshot_config_demo.py  web_app.py  workflow_node_demo
examples/json_demo/: quality_auditor_result.json  script_parser_result.json  shot_segmenter_result.json
examples/script_txt/: ai_storyboard_script.txt  natural_language_script.txt  standard_script_script.txt  structured_scene_script.txt
scripts/: cli-example.txt  cli.py  setup_env.py
src/hengshot/: __init__.py  logger.py
src/hengshot/api/: index_api.py  shot_api.py
src/hengshot/app/: __init__.py  application.py  proxy.py
src/hengshot/config/: __init__.py  config.py  logging.yaml
src/hengshot/config/env/: __init__.py  production.yaml
src/hengshot/hengline/: __init__.py  context_var.py  hengline_agent.py  hengline_config.py  language_manage.py
src/hengshot/hengline/agent/: __init__.py  base_agent.py  prompt_converter_agent.py  quality_auditor_agent.py  script_parser_agent.py  shot_segmenter_agent.py  video_splitter_agent.py
src/hengshot/hengline/agent/continuity_guardian/: continuity_guardian_models.py
src/hengshot/hengline/agent/human_decision/: human_decision_converter.py  human_decision_intervention.py  human_decision_models.py  human_enhanced_converter.py
src/hengshot/hengline/agent/prompt_converter/: base_prompt_converter.py  llm_prompt_converter.py  prompt_converter_factory.py  (+2 more)
src/hengshot/hengline/client/: __init__.py  base_client.py  client_config.py  client_factory.py
src/hengshot/hengline/config/: action_duration_config.py  base_config.py  continuity_guardian_config.py  keyword_config.py  script_parser_config.py  temporal_planner_config.py
src/hengshot/hengline/prompts/: __init__.py  prompts_manager.py
src/hengshot/hengline/task/: task_handler.py  task_manager.py  task_models.py  task_processor.py
src/hengshot/hengline/tools/: __init__.py  action_duration_tool.py  json_parser_tool.py  langchain_memory_tool.py  result_storage_tool.py  script_assessor_tool.py  script_parser_tool.py
src/hengshot/utils/: api_utils.py  color_utils.py  console_colors.py  counter_utils.py  dotenv_loader.py  env_utils.py  file_utils.py  log_utils.py  obj_utils.py  path_utils.py  prompt_utils.py
src/penshot/: __init__.py  http_server.py  logger.py  mcp_http_server.py  mcp_server.py
src/penshot/api/: __init__.py  function_calls.py  mcp_http_server.py  mcp_server.py  rest_api.py
src/penshot/app/: application.py  setup_env.py
src/penshot/config/: __init__.py  config.py  config_loader.py  config_models.py  settings.yaml
src/penshot/neopen/: __init__.py  shot_agent.py  shot_config.py  shot_language.py
src/penshot/neopen/agent/: __init__.py  base_agent.py  base_llm_agent.py  base_models.py  base_repairable_agent.py  prompt_converter_agent.py  quality_auditor_agent.py  script_parser_agent.py  shot_segmenter_agent.py  video_splitter_agent.py
src/penshot/neopen/client/: base_client.py  client_config.py  client_factory.py
src/penshot/neopen/config/: action_duration_config.py  base_config.py  continuity_guardian_config.py  keyword_config.py  script_parser_config.py  temporal_planner_config.py
src/penshot/neopen/knowledge/: llama_index_router.py
src/penshot/neopen/prompts/: prompt_template_manager.py  prompts_manager.py
src/penshot/neopen/task/: __init__.py  task_factory.py  task_lifecycle_service.py  task_manager.py  task_models.py  task_processor.py  task_repository.py  workflow_registry.py
src/penshot/neopen/tools/: langchain_memory_tool.py  result_storage_tool.py  script_parser_tool.py
src/penshot/utils/: dotenv_loader.py  enum_utils.py  obj_utils.py  redis_utils.py
src/video_shot_breakdown/hengline/: hengline_config.py
src/video_shot_breakdown/hengline/agent/: base_agent.py  base_models.py  prompt_converter_agent.py  script_parser_agent.py  shot_segmenter_agent.py  video_splitter_agent.py
src/video_shot_breakdown/hengline/client/: client_config.py  client_factory.py
src/video_shot_breakdown/hengline/tools/: result_storage_tool.py
tests/: conftest.py  test_config.py  test_continuity_guardian.py  test_script_parser.py  test_shot_segmenter.py  test_video_splitter.py
tests/api/: test_mcp.py
tests/other/: test_langchain_memory.py  test_mcp.py  test_time_annotation.py
tests/planner/: test_action_duration.py  test_ai_estimator.py  test_duration_estimator.py  test_duration_splitter.py  test_hybrid_estimator.py  test_rule_action_estimator.py  test_rule_dialogue_estimator.py  test_rule_estimator.py  test_rule_scene_estimator.py  test_shot_generator.py  test_temporal_planner.py
tests/task/: test_memory.py  test_task_lifecycle_service.py  test_workflow_registry.py
tests/unit/: test_api_client.py  test_langchain_memory.py  test_ollama_client.py  test_parse_dict.py  test_time_annotation.py  test_utils.py
tests/workflow/: test_workflow_orchestrator.py
(+135 files in other folders)
